--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,19 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainFragments.HomeScreenFragment"
     android:id="@+id/home_layout">
-
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp">
 
-            <TextView
-                android:id="@+id/tv_github_search_results_json"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Make a search!"
-                android:textSize="18sp" />
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
 
 
