--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -26,4 +26,28 @@
   <dimen name="desc_padding">
     40dp
   </dimen>
+  <dimen name="margin_8">
+    8dp
+  </dimen>
+  <dimen name="margin_16">
+    16dp
+  </dimen>
+  <dimen name="margin_24">
+    24dp
+  </dimen>
+  <dimen name="big_icon_128dp">
+    128dp
+  </dimen>
+  <dimen name="big_text">
+    84sp
+  </dimen>
+  <dimen name="text_view_18sp">
+    18sp
+  </dimen>
+  <dimen name="text_view_24sp">
+    24sp
+  </dimen>
+  <dimen name="text_view_48sp">
+    48sp
+  </dimen>
 </resources>
