--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -26,4 +26,28 @@
   <dimen name="desc_padding">
     45.67dp
   </dimen>
+  <dimen name="margin_8">
+    9.13dp
+  </dimen>
+  <dimen name="margin_16">
+    18.27dp
+  </dimen>
+  <dimen name="margin_24">
+    27.4dp
+  </dimen>
+  <dimen name="big_icon_128dp">
+    146.13dp
+  </dimen>
+  <dimen name="big_text">
+    95.9sp
+  </dimen>
+  <dimen name="text_view_18sp">
+    20.55sp
+  </dimen>
+  <dimen name="text_view_24sp">
+    27.4sp
+  </dimen>
+  <dimen name="text_view_48sp">
+    54.8sp
+  </dimen>
 </resources>
