setting screen ready

--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     60.0dp
   </dimen>
+  <dimen name="margin_4">
+    6.0dp
+  </dimen>
   <dimen name="margin_8">
     12.0dp
   </dimen>
@@ -35,11 +38,17 @@
   <dimen name="margin_24">
     36.0dp
   </dimen>
+  <dimen name="margin_32">
+    48.0dp
+  </dimen>
   <dimen name="big_icon_128dp">
     192.0dp
   </dimen>
   <dimen name="big_text">
     126.0sp
+  </dimen>
+  <dimen name="text_view_14sp">
+    21.0sp
   </dimen>
   <dimen name="text_view_18sp">
     27.0sp
