--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:padding="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     tools:context=".MainFragments.HomeScreenFragment"
     android:id="@+id/home_layout">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +24,7 @@
                     android:layout_marginStart="@dimen/margin_8"
                     android:layout_marginLeft="@dimen/margin_8"
                     app:fontFamily="@font/nunito"
-                    android:text="24°C"
+                    android:text="30°C"
                     android:textSize="@dimen/text_view_48sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/icon" />
