--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,58 +1,296 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainFragments.SettingFragment">
-
-    <TextView
-        android:id="@+id/tv_temp_setting_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="center"
-        android:text="@string/temp_unit_setting_title"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.36" />
-
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:padding="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainFragments.SettingFragment"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin">
     <LinearLayout
-        android:id="@+id/setting_button_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:orientation="horizontal"
-        android:weightSum="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_temp_setting_title">
-
-        <Button
-            android:id="@+id/btn_temp_f"
-            android:layout_width="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_setting"
+            android:layout_width="match_parent"
+            app:fontFamily="@font/nunito"
+            android:text="@string/setting"
+            android:paddingTop="@dimen/margin_8"
+            android:paddingBottom="@dimen/margin_8"
+            android:gravity="center"
+            android:textSize="@dimen/text_view_24sp"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_8"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:text="@string/temp_setting_degree_f" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_temp_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/temperature_setting_title"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="4">
+                <Button
+                    android:id="@+id/btn_c"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/temp_setting_degree_c"/>
+                <Button
+                    android:id="@+id/btn_f"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/temp_setting_degree_f"/>
+                <Button
+                    android:id="@+id/btn_scientist"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/scientist"/>
+            </LinearLayout>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_temp_c"
-            android:textSize="20sp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/temp_setting_degree_c" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_distance_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/distance_setting_title"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="4">
+                <Button
+                    android:id="@+id/btn_km"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/km"/>
+                <Button
+                    android:id="@+id/btn_mi"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/mi"/>
+                <Button
+                    android:id="@+id/btn_bananas"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/bananas"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_speed_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/speed_setting_title"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="4">
+                <Button
+                    android:id="@+id/btn_kmph"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/kmph"/>
+                <Button
+                    android:id="@+id/btn_miph"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/miph"/>
+                <Button
+                    android:id="@+id/btn_bananaph"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/banana_h"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_pressure_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/pressure_setting_title"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="4">
+                <Button
+                    android:id="@+id/btn_psi"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/psi"/>
+                <Button
+                    android:id="@+id/btn_mmhg"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/mmhg"/>
+                <Button
+                    android:id="@+id/btn_depress"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/your_depression"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_help_setting"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/help_setting_title"/>
+            <LinearLayout
+                android:layout_marginTop="@dimen/margin_4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="2">
+                <Button
+                    android:id="@+id/btn_help_dev"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    app:fontFamily="@font/nunito"
+                    android:layout_marginRight="@dimen/margin_4"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:textAllCaps="false"
+                    android:text="@string/help_the_developer"/>
+                <Button
+                    android:id="@+id/btn_help_me"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="@dimen/margin_4"
+                    app:fontFamily="@font/nunito"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="@dimen/text_view_14sp"
+                    android:text="@string/help_me"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_rate"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:layout_marginTop="@dimen/margin_32"
+                android:text="@string/rate_setting_title"/>
+            <TextView
+                android:id="@+id/tv_about"
+                android:layout_width="match_parent"
+                app:fontFamily="@font/nunito"
+                android:layout_marginTop="@dimen/margin_32"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_view_18sp"
+                android:text="@string/about_setting_title"/>
+        </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
