--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     40dp
   </dimen>
+  <dimen name="margin_4">
+    4dp
+  </dimen>
   <dimen name="margin_8">
     8dp
   </dimen>
@@ -35,11 +38,17 @@
   <dimen name="margin_24">
     24dp
   </dimen>
+  <dimen name="margin_32">
+    32dp
+  </dimen>
   <dimen name="big_icon_128dp">
     128dp
   </dimen>
   <dimen name="big_text">
     84sp
+  </dimen>
+  <dimen name="text_view_14sp">
+    14sp
   </dimen>
   <dimen name="text_view_18sp">
     18sp
