--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     45.67dp
   </dimen>
+  <dimen name="margin_4">
+    4.57dp
+  </dimen>
   <dimen name="margin_8">
     9.13dp
   </dimen>
@@ -35,11 +38,17 @@
   <dimen name="margin_24">
     27.4dp
   </dimen>
+  <dimen name="margin_32">
+    36.53dp
+  </dimen>
   <dimen name="big_icon_128dp">
     146.13dp
   </dimen>
   <dimen name="big_text">
     95.9sp
+  </dimen>
+  <dimen name="text_view_14sp">
+    15.98sp
   </dimen>
   <dimen name="text_view_18sp">
     20.55sp
