--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     53.33dp
   </dimen>
+  <dimen name="margin_4">
+    5.33dp
+  </dimen>
   <dimen name="margin_8">
     10.67dp
   </dimen>
@@ -35,11 +38,17 @@
   <dimen name="margin_24">
     32.0dp
   </dimen>
+  <dimen name="margin_32">
+    42.67dp
+  </dimen>
   <dimen name="big_icon_128dp">
     170.67dp
   </dimen>
   <dimen name="big_text">
     112.0sp
+  </dimen>
+  <dimen name="text_view_14sp">
+    18.67sp
   </dimen>
   <dimen name="text_view_18sp">
     24.0sp
