--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -53,8 +53,14 @@
   <dimen name="text_view_18sp">
     18sp
   </dimen>
+  <dimen name="text_view_20sp">
+    20sp
+  </dimen>
   <dimen name="text_view_24sp">
     24sp
+  </dimen>
+  <dimen name="text_view_36sp">
+    36sp
   </dimen>
   <dimen name="text_view_48sp">
     48sp
