--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -53,8 +53,14 @@
   <dimen name="text_view_18sp">
     27.0sp
   </dimen>
+  <dimen name="text_view_20sp">
+    30.0sp
+  </dimen>
   <dimen name="text_view_24sp">
     36.0sp
+  </dimen>
+  <dimen name="text_view_36sp">
+    54.0sp
   </dimen>
   <dimen name="text_view_48sp">
     72.0sp
