--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,9 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:padding="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainFragments.SettingFragment"
     android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin">
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    tools:context=".MainFragments.SettingFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
