--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,12 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:padding="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     tools:context=".MainFragments.DetailsFragment">
     <LinearLayout
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -29,7 +28,7 @@
             android:id="@+id/layoutRealFeel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_16">
+            android:layout_marginTop="@dimen/margin_8">
 
             <TextView
                 android:id="@+id/tv_tempRealFeel"
@@ -41,7 +40,6 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 app:fontFamily="@font/nunito"
-                android:text="40"
                 android:textSize="@dimen/text_view_36sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +76,8 @@
                 android:layout_marginEnd="@dimen/margin_4"
                 android:padding="@dimen/margin_8">
                 <TextView
-                    android:id="@+id/tv_UV"
+                    android:id="@+id/tv_Uv"
                     app:fontFamily="@font/nunito"
-                    android:text="22"
                     android:gravity="center"
                     android:textSize="@dimen/text_view_20sp"
                     android:layout_width="match_parent"
@@ -107,7 +104,6 @@
                 <TextView
                     android:id="@+id/tv_humidity"
                     app:fontFamily="@font/nunito"
-                    android:text="22"
                     android:gravity="center"
                     android:textSize="@dimen/text_view_20sp"
                     android:layout_width="match_parent"
@@ -142,7 +138,6 @@
                 <TextView
                     android:id="@+id/tv_visibility"
                     app:fontFamily="@font/nunito"
-                    android:text="22"
                     android:gravity="center"
                     android:textSize="@dimen/text_view_20sp"
                     android:layout_width="match_parent"
@@ -169,7 +164,6 @@
                 <TextView
                     android:id="@+id/tv_pressure"
                     app:fontFamily="@font/nunito"
-                    android:text="22"
                     android:gravity="center"
                     android:textSize="@dimen/text_view_20sp"
                     android:layout_width="match_parent"
@@ -187,9 +181,10 @@
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="@dimen/margin_16"
+            android:id="@+id/layoutAqi"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_16"
             android:padding="@dimen/margin_8">
 
             <TextView
@@ -233,20 +228,21 @@
             android:layout_marginTop="@dimen/margin_16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/margin_8">
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_forecast_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/forecast_title"
                 android:textSize="@dimen/text_view_18sp"
-                app:fontFamily="@font/nunito"/>
+                android:padding="@dimen/margin_8"
+                app:fontFamily="@font/nunito"
+                />
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_marginTop="@dimen/margin_8"
                 android:id="@+id/rv_forecast"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+                tools:listitem="@layout/forecast_item"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
