--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
     <dimen name="margin_32">32dp</dimen>
 
     <dimen name="big_icon_128dp">128dp</dimen>
+    <dimen name="forecast_item_height">220dp</dimen>
+    <dimen name="icon_90dp">90dp</dimen>
     <dimen name="big_text">84sp</dimen>
     <dimen name="text_view_14sp">14sp</dimen>
     <dimen name="text_view_18sp">18sp</dimen>
