--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_n_16">-16dp</dimen>
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_32">32dp</dimen>
 
@@ -25,4 +26,14 @@
     <dimen name="text_view_24sp">24sp</dimen>
     <dimen name="text_view_36sp">36sp</dimen>
     <dimen name="text_view_48sp">48sp</dimen>
+    <dimen name="text_view_54sp">54sp</dimen>
+
+    <dimen name="widget_height">180dp</dimen>
+    <dimen name="widget_width">320dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
