add a clock to the widget

--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -32,6 +32,9 @@
   <dimen name="margin_8">
     9.13dp
   </dimen>
+  <dimen name="margin_n_8">
+    -9.13dp
+  </dimen>
   <dimen name="margin_16">
     18.27dp
   </dimen>
