--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -9,41 +9,91 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="@dimen/margin_n_16"
-        android:weightSum="3">
+
+        android:weightSum="2"
+        android:baselineAligned="false">
         <LinearLayout
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="center_vertical">
-            <ImageView
-                android:id="@+id/tv_temp_widget"
+            android:paddingLeft="@dimen/margin_16"
+            android:layout_gravity="bottom"
+            android:paddingStart="@dimen/margin_16">
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/margin_16"
-                android:paddingStart="@dimen/margin_16" />
+                android:orientation="horizontal"
+                android:gravity="bottom"
+                android:layout_marginTop="@dimen/margin_8">
+                <ImageView
+                    android:id="@+id/widget_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <ImageView
+                    android:id="@+id/widget_day_night"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_8"
+                    android:layout_gravity="bottom"/>
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/widget_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom" />
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="vertical"
+            android:paddingRight="@dimen/margin_16"
+            android:paddingEnd="@dimen/margin_16">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:layout_marginBottom="@dimen/margin_n_8"                >
+
+                <ImageView
+                    android:id="@+id/widget_icon"
+                    android:layout_width="@dimen/icon_90dp"
+                    android:layout_gravity="end"
+                    android:layout_marginRight="@dimen/margin_n_16"
+                    android:layout_height="@dimen/icon_90dp" />
+                <ImageView
+                    android:id="@+id/tv_temp_widget"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center|end"
+
+                    android:layout_marginTop="@dimen/margin_4"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/margin_16"
+                    android:paddingStart="@dimen/margin_16" />
+            </LinearLayout>
             <ImageView
                 android:id="@+id/tv_reaFeel_widget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="start"
+                android:layout_gravity="end"
+                android:gravity="end"
                 android:paddingLeft="@dimen/margin_16"
                 android:paddingStart="@dimen/margin_16" />
-
         </LinearLayout>
-        <ImageView
-            android:layout_weight="1"
-            android:id="@+id/widget_icon"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/big_icon_128dp" />
+
 
     </LinearLayout>
     <ImageView
         android:id="@+id/quote_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_16"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_below="@id/layout_data"/>
