--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -32,6 +32,9 @@
   <dimen name="margin_8">
     8dp
   </dimen>
+  <dimen name="margin_n_8">
+    -8dp
+  </dimen>
   <dimen name="margin_16">
     16dp
   </dimen>
