--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -32,6 +32,9 @@
   <dimen name="margin_8">
     10.67dp
   </dimen>
+  <dimen name="margin_n_8">
+    -10.67dp
+  </dimen>
   <dimen name="margin_16">
     21.33dp
   </dimen>
