--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -32,6 +32,9 @@
   <dimen name="margin_8">
     12.0dp
   </dimen>
+  <dimen name="margin_n_8">
+    -12.0dp
+  </dimen>
   <dimen name="margin_16">
     24.0dp
   </dimen>
