--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -32,6 +32,9 @@
   <dimen name="margin_8">
     13.33dp
   </dimen>
+  <dimen name="margin_n_8">
+    -13.33dp
+  </dimen>
   <dimen name="margin_16">
     26.67dp
   </dimen>
