--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="desc_padding">40dp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_n_8">-8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="margin_n_16">-16dp</dimen>
     <dimen name="margin_24">24dp</dimen>
