--- a/app/src/main/res/layout/normal_widget.xml
+++ b/app/src/main/res/layout/normal_widget.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/widget_layout"
@@ -89,20 +89,26 @@
 
 
     </LinearLayout>
-    <ImageView
-        android:id="@+id/quote_main"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/widget_quote_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_below="@id/layout_data"/>
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/quote_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_16"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_below="@id/layout_data"/>
 
-    <ImageView
-        android:id="@+id/quote_sub"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_below="@id/quote_main" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/quote_sub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_below="@id/quote_main" />
+    </LinearLayout>
+</LinearLayout>
