--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="slide_title">30dp</dimen>
     <dimen name="slide_desc">16dp</dimen>
     <dimen name="desc_padding">40dp</dimen>
+    <dimen name="aqi_scale_height">3dp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_n_8">-8dp</dimen>
@@ -21,6 +22,7 @@
     <dimen name="forecast_item_height">220dp</dimen>
     <dimen name="icon_90dp">90dp</dimen>
     <dimen name="big_text">84sp</dimen>
+    <dimen name="text_view_12sp">12sp</dimen>
     <dimen name="text_view_14sp">14sp</dimen>
     <dimen name="text_view_18sp">18sp</dimen>
     <dimen name="text_view_20sp">20sp</dimen>
