--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     40dp
   </dimen>
+  <dimen name="aqi_scale_height">
+    3dp
+  </dimen>
   <dimen name="margin_4">
     4dp
   </dimen>
@@ -58,6 +61,9 @@
   </dimen>
   <dimen name="big_text">
     84sp
+  </dimen>
+  <dimen name="text_view_12sp">
+    12sp
   </dimen>
   <dimen name="text_view_14sp">
     14sp
