--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     45.67dp
   </dimen>
+  <dimen name="aqi_scale_height">
+    3.43dp
+  </dimen>
   <dimen name="margin_4">
     4.57dp
   </dimen>
@@ -58,6 +61,9 @@
   </dimen>
   <dimen name="big_text">
     95.9sp
+  </dimen>
+  <dimen name="text_view_12sp">
+    13.7sp
   </dimen>
   <dimen name="text_view_14sp">
     15.98sp
