--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -26,6 +26,9 @@
   <dimen name="desc_padding">
     66.67dp
   </dimen>
+  <dimen name="aqi_scale_height">
+    5.0dp
+  </dimen>
   <dimen name="margin_4">
     6.67dp
   </dimen>
@@ -58,6 +61,9 @@
   </dimen>
   <dimen name="big_text">
     140.0sp
+  </dimen>
+  <dimen name="text_view_12sp">
+    20.0sp
   </dimen>
   <dimen name="text_view_14sp">
     23.33sp
