prepare for help me activity

--- a/app/src/main/res/layout/activity_help_me.xml
+++ b/app/src/main/res/layout/activity_help_me.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".Activities.HelpMeActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/margin_16"
+        android:text="This place is currently under development, please go back!"
+        android:textColor="#000"
+        android:textSize="@dimen/text_view_18sp"
+        app:fontFamily="@font/nunito"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/btn_go_back"
+        android:layout_width="@dimen/icon_36dp"
+        android:layout_height="@dimen/icon_36dp"
+        android:layout_marginStart="@dimen/margin_16"
+        android:layout_marginLeft="@dimen/margin_16"
+        android:layout_marginTop="@dimen/margin_16"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
