--- a/app/src/main/res/values-sw320dp/dimens.xml
+++ b/app/src/main/res/values-sw320dp/dimens.xml
@@ -50,6 +50,18 @@
   <dimen name="margin_32">
     28.44dp
   </dimen>
+  <dimen name="wind_detail_ground_view_height">
+    0.44dp
+  </dimen>
+  <dimen name="windmill_base_width">
+    144.0dp
+  </dimen>
+  <dimen name="windmill_base_height">
+    94.22dp
+  </dimen>
+  <dimen name="windmill_wings_width">
+    62.22dp
+  </dimen>
   <dimen name="big_icon_128dp">
     113.78dp
   </dimen>
