--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -50,6 +50,18 @@
   <dimen name="margin_32">
     36.53dp
   </dimen>
+  <dimen name="wind_detail_ground_view_height">
+    0.57dp
+  </dimen>
+  <dimen name="windmill_base_width">
+    184.95dp
+  </dimen>
+  <dimen name="windmill_base_height">
+    121.02dp
+  </dimen>
+  <dimen name="windmill_wings_width">
+    79.92dp
+  </dimen>
   <dimen name="big_icon_128dp">
     146.13dp
   </dimen>
