--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -50,6 +50,18 @@
   <dimen name="margin_32">
     42.67dp
   </dimen>
+  <dimen name="wind_detail_ground_view_height">
+    0.67dp
+  </dimen>
+  <dimen name="windmill_base_width">
+    216.0dp
+  </dimen>
+  <dimen name="windmill_base_height">
+    141.33dp
+  </dimen>
+  <dimen name="windmill_wings_width">
+    93.33dp
+  </dimen>
   <dimen name="big_icon_128dp">
     170.67dp
   </dimen>
