--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_screen2">
 
     <LinearLayout
@@ -12,16 +13,18 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/snow_w" />
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp360"
+            android:src="@drawable/instruction1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/slide_2_title"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
+            android:gravity="center"
+            app:fontFamily="@font/nunito"
+            android:textSize="@dimen/text_view_24sp"
             android:textStyle="bold" />
 
         <TextView
@@ -30,9 +33,10 @@
             android:layout_marginTop="20dp"
             android:paddingLeft="@dimen/desc_padding"
             android:paddingRight="@dimen/desc_padding"
+            app:fontFamily="@font/nunito"
             android:text="@string/slide_2_desc"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
+            android:textSize="@dimen/text_view_18sp" />
     </LinearLayout>
 </RelativeLayout>
