--- a/app/src/main/res/layout/welcome_slide4.xml
+++ b/app/src/main/res/layout/welcome_slide4.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/bg_screen4">
 
     <LinearLayout
@@ -12,16 +13,17 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="@dimen/img_width_height"
-            android:layout_height="@dimen/img_width_height"
-            android:src="@drawable/clear_day_w" />
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp360"
+            android:src="@drawable/instruction3" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/slide_4_title"
+            app:fontFamily="@font/nunito"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_title"
+            android:textSize="@dimen/text_view_24sp"
             android:textStyle="bold" />
 
         <TextView
@@ -32,8 +34,9 @@
             android:paddingRight="@dimen/desc_padding"
             android:text="@string/slide_4_desc"
             android:textAlignment="center"
+            app:fontFamily="@font/nunito"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/slide_desc" />
+            android:textSize="@dimen/text_view_18sp" />
 
     </LinearLayout>
 
