--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -44,11 +44,17 @@
   <dimen name="margin_n_16">
     -16dp
   </dimen>
+  <dimen name="margin_20">
+    20dp
+  </dimen>
   <dimen name="margin_24">
     24dp
   </dimen>
   <dimen name="margin_32">
     32dp
+  </dimen>
+  <dimen name="dp360">
+    360dp
   </dimen>
   <dimen name="wind_detail_ground_view_height">
     0.5dp
