--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -44,11 +44,17 @@
   <dimen name="margin_n_16">
     -18.27dp
   </dimen>
+  <dimen name="margin_20">
+    22.83dp
+  </dimen>
   <dimen name="margin_24">
     27.4dp
   </dimen>
   <dimen name="margin_32">
     36.53dp
+  </dimen>
+  <dimen name="dp360">
+    411.0dp
   </dimen>
   <dimen name="wind_detail_ground_view_height">
     0.57dp
