--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -44,11 +44,17 @@
   <dimen name="margin_n_16">
     -21.33dp
   </dimen>
+  <dimen name="margin_20">
+    26.67dp
+  </dimen>
   <dimen name="margin_24">
     32.0dp
   </dimen>
   <dimen name="margin_32">
     42.67dp
+  </dimen>
+  <dimen name="dp360">
+    480.0dp
   </dimen>
   <dimen name="wind_detail_ground_view_height">
     0.67dp
