--- a/app/src/main/res/values-sw540dp/dimens.xml
+++ b/app/src/main/res/values-sw540dp/dimens.xml
@@ -44,11 +44,17 @@
   <dimen name="margin_n_16">
     -24.0dp
   </dimen>
+  <dimen name="margin_20">
+    30.0dp
+  </dimen>
   <dimen name="margin_24">
     36.0dp
   </dimen>
   <dimen name="margin_32">
     48.0dp
+  </dimen>
+  <dimen name="dp360">
+    540.0dp
   </dimen>
   <dimen name="wind_detail_ground_view_height">
     0.75dp
