--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -44,11 +44,17 @@
   <dimen name="margin_n_16">
     -26.67dp
   </dimen>
+  <dimen name="margin_20">
+    33.33dp
+  </dimen>
   <dimen name="margin_24">
     40.0dp
   </dimen>
   <dimen name="margin_32">
     53.33dp
+  </dimen>
+  <dimen name="dp360">
+    600.0dp
   </dimen>
   <dimen name="wind_detail_ground_view_height">
     0.83dp
