--- a/app/src/main/res/drawable/circle_indicator.xml
+++ b/app/src/main/res/drawable/circle_indicator.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#DA5F6A"/>
+        android:color="#fff"/>
+    <stroke android:width="@dimen/indicator_stroke_width"
+        android:color="#000"/>
     <size
-        android:width="@dimen/margin_8"
-        android:height="@dimen/margin_8"/>
+        android:width="@dimen/indicator_size"
+        android:height="@dimen/indicator_size"/>
 </shape>
