--- a/app/src/main/res/values-sw411dp/dimens.xml
+++ b/app/src/main/res/values-sw411dp/dimens.xml
@@ -29,6 +29,12 @@
   <dimen name="aqi_scale_height">
     3.43dp
   </dimen>
+  <dimen name="indicator_stroke_width">
+    1.14dp
+  </dimen>
+  <dimen name="indicator_size">
+    9.13dp
+  </dimen>
   <dimen name="margin_4">
     4.57dp
   </dimen>
